fixes, make slightly longer

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -227,22 +227,123 @@
 
 
 @article{triss2010,
-  title = {Trauma and {{Injury Severity Score}} ({{TRISS}}) Coefficients 2009 Revision},
-  author = {Schluter, Philip J. and Nathens, Avery and Neal, Melanie L. and Goble, Sandra and Cameron, Cate M. and Davey, Tamzyn M. and McClure, Roderick J.},
-  year = {2010},
-  month = apr,
-  journal = {The Journal of Trauma},
-  volume = {68},
-  number = {4},
-  pages = {761--770},
-  issn = {1529-8809},
-  doi = {10.1097/TA.0b013e3181d3223b},
-  langid = {english},
-  pmid = {20386271},
-  keywords = {Adolescent,Adult,Aged,Chi-Square Distribution,Humans,Injury Severity Score,Logistic Models,Markov Chains,Middle Aged,Predictive Value of Tests,ROC Curve,Trauma Severity Indices,United States,Wounds and Injuries},
-}
+  title         = {Trauma and {{Injury Severity Score}} ({{TRISS}}) Coefficients 2009 Revision},
+  author        = {Schluter, Philip J. and Nathens, Avery and Neal, Melanie L. and Goble, Sandra and Cameron, Cate M. and Davey, Tamzyn M. and McClure, Roderick J.},
+  year          = {2010},
+  month         = apr,
+  journal       = {The Journal of Trauma},
+  volume        = {68},
+  number        = {4},
+  pages         = {761--770},
+  issn          = {1529-8809},
+  doi           = {10.1097/TA.0b013e3181d3223b},
+  langid        = {english},
+  pmid          = {20386271},
+  keywords      = {Adolescent,Adult,Aged,Chi-Square Distribution,Humans,Injury Severity Score,Logistic Models,Markov Chains,Middle Aged,Predictive Value of Tests,ROC Curve,Trauma Severity Indices,United States,Wounds and Injuries},
+  }
+
+@article{hakkenbrakprevdeath,
+  title         = {Preventable Death in Trauma: {{A}} Systematic Review on Definition and Classification},
+  shorttitle    = {Preventable Death in Trauma},
+  author        = {Hakkenbrak, N.A.G. and Mikdad, S.Y. and Zuidema, W.P. and Halm, J.A. and Schoonmade, L.J. and Reijnders, U.J.L. and Bloemers, F.W. and Giannakopoulos, G.F.},
+  year          = {2021},
+  month         = oct,
+  journal       = {Injury},
+  volume        = {52},
+  number        = {10},
+  pages         = {2768--2777},
+  issn          = {00201383},
+  doi           = {10.1016/j.injury.2021.07.040},
+  langid        = {english},
+  }
+
+@article{normit,
+  title         = {Norwegian Survival Prediction Model in Trauma: Modelling Effects of Anatomic Injury, Acute Physiology, Age, and Co-Morbidity},
+  shorttitle    = {Norwegian Survival Prediction Model in Trauma},
+  author        = {Jones, J M and Skaga, N O and S{\o}vik, S and Lossius, H M and Eken, T},
+  year          = {2014},
+  month         = jan,
+  journal       = {Acta Anaesthesiologica Scandinavica},
+  volume        = {58},
+  number        = {3},
+  pages         = {303--315},
+  issn          = {0001-5172},
+  doi           = {10.1111/aas.12256},
+  pmcid         = {PMC4276290},
+  pmid          = {24438461},
+  }
+
+@article{nissbetter,
+  title         = {A {{Modification}} of the {{Injury Severity Score That Both Improves Accuracy}} and {{Simplifies Scoring}}},
+  author        = {Osler, Turner and Baker, Susan P. and Long, William},
+  year          = {1997},
+  month         = dec,
+  journal       = {Journal of Trauma and Acute Care Surgery},
+  volume        = {43},
+  number        = {6},
+  pages         = {922--926},
+  issn          = {2163-0755},
+  langid        = {american},
+  }
 
 
+@article{historytss,
+  title         = {History and {{Current Status}} of {{Trauma Scoring Systems}}},
+  author        = {Wisner, David H.},
+  year          = {1992},
+  month         = jan,
+  journal       = {Archives of Surgery},
+  volume        = {127},
+  number        = {1},
+  pages         = {111--117},
+  issn          = {0004-0010},
+  doi           = {10.1001/archsurg.1992.01420010133022},
+  }
+  
+
+@article{assessingquality,
+  title         = {Assessing {{Quality}} of {{Care}} in a {{Trauma Referral Center}}: {{Benchmarking Performance}} by {{TRISS-Based Statistics}} or by {{Analysis}} of {{Stratified ISS Data}}?},
+  shorttitle    = {Assessing {{Quality}} of {{Care}} in a {{Trauma Referral Center}}},
+  author        = {Skaga, Nils O. and Eken, Torsten and Steen, Petter A.},
+  year          = {2006},
+  month         = mar,
+  journal       = {Journal of Trauma and Acute Care Surgery},
+  volume        = {60},
+  number        = {3},
+  pages         = {538--547},
+  issn          = {2163-0755},
+  doi           = {10.1097/01.ta.0000205613.52586.d1},
+  langid        = {american},
+  }
+
+
+@article{skagaValidatingPerformanceTRISS2018,
+  title       = {Validating Performance of {{TRISS}}, {{TARN}} and {{NORMIT}} Survival Prediction Models in a {{Norwegian}} Trauma Population},
+  author      = {Skaga, N. O. and Eken, T. and S{\o}vik, S.},
+  year        = {2018},
+  journal     = {Acta Anaesthesiologica Scandinavica},
+  volume      = {62},
+  number      = {2},
+  pages       = {253--266},
+  issn        = {1399-6576},
+  doi         = {10.1111/aas.13029},
+  langid      = {english},
+  }
+
+@article{validationnormit,
+  title       = {Validation of the {{Norwegian}} Survival Prediction Model in Trauma ({{NORMIT}}) in {{Swedish}} Trauma Populations},
+  author      = {Ghorbani, P. and Tro{\"e}ng, T. and Brattstr{\"o}m, O. and Ringdal, K. G. and Eken, T. and Ekbom, A. and Str{\"o}mmer, L.},
+  year        = {2020},
+  month       = mar,
+  journal     = {The British Journal of Surgery},
+  volume      = {107},
+  number      = {4},
+  pages       = {381--390},
+  issn        = {1365-2168},
+  doi         = {10.1002/bjs.11306},
+  langid      = {english},
+  pmid        = {31461168},
+  }
 
 
 
